SERVER-45396 Fix the 'me' field in isMaster responses when using splithorizon