jstests/ssl/repl_ssl_split_horizon.js
@@ -108,6 +108,11 @@ replTest.initiate(config);
 
 var checkExpectedHorizon = function(url, memberIndex, expectedHostname) {
     // Run isMaster in the shell and check that we get the expected hostname back
+    const assertion = (memberIndex === "me")
+        ? ("assert(db.runCommand({isMaster: 1})['me'] == '" + expectedHostname + "')")
+        : ("assert(db.runCommand({isMaster: 1})['hosts'][" + memberIndex + "] == '" +
+           expectedHostname + "')");
+
     var argv = [
         'env',
         "HOSTALIASES=" + hostsFile,
@@ -115,8 +120,7 @@ var checkExpectedHorizon = function(url, memberIndex, expectedHostname) {
         './mongo',
         url,
         '--eval',
-        ("assert(db.runCommand({isMaster: 1})['hosts'][" + memberIndex + "] == '" +
-         expectedHostname + "')")
+        assertion
     ];
     return runMongoProgram(...argv);
 };
@@ -125,6 +129,9 @@ var checkExpectedHorizon = function(url, memberIndex, expectedHostname) {
 var defaultURL = `mongodb://${node0localHostname}/admin?replicaSet=${replTest.name}&ssl=true`;
 jsTestLog(`URL without horizon: ${defaultURL}`);
 assert.eq(checkExpectedHorizon(defaultURL, 0, node0localHostname),
+          0,
+          "localhost does not return horizon");
+assert.eq(checkExpectedHorizon(defaultURL, "me", node0localHostname),
           0,
           "localhost does not return horizon");
 assert.eq(checkExpectedHorizon(defaultURL, 1, node1localHostname),
@@ -137,6 +144,9 @@ jsTestLog(`URL with horizon: ${horizonURL}`);
 assert.eq(checkExpectedHorizon(horizonURL, 0, node0horizonHostname),
           0,
           "does not return horizon as expected");
+assert.eq(checkExpectedHorizon(horizonURL, "me", node0horizonHostname),
+          0,
+          "does not return horizon as expected");
 assert.eq(checkExpectedHorizon(horizonURL, 1, node1horizonHostname),
           0,
           "does not return horizon as expected");
@@ -146,6 +156,9 @@ var horizonMissingURL =
     `mongodb://${node0horizonMissingHostname}/admin?replicaSet=${replTest.name}&ssl=true`;
 jsTestLog(`URL with horizon: ${horizonMissingURL}`);
 assert.eq(checkExpectedHorizon(horizonMissingURL, 0, node0localHostname),
+          0,
+          "does not return localhost as expected");
+assert.eq(checkExpectedHorizon(horizonMissingURL, "me", node0localHostname),
           0,
           "does not return localhost as expected");
 assert.eq(checkExpectedHorizon(horizonMissingURL, 1, node1localHostname),
@@ -164,6 +177,9 @@ var horizonMissingURL =
     `mongodb://${node0horizonMissingHostname}/admin?replicaSet=${replTest.name}&ssl=true`;
 jsTestLog(`URL with horizon: ${horizonMissingURL}`);
 assert.eq(checkExpectedHorizon(horizonMissingURL, 0, node0horizonMissingHostname),
+          0,
+          "does not return horizon as expected");
+assert.eq(checkExpectedHorizon(horizonMissingURL, "me", node0horizonMissingHostname),
           0,
           "does not return horizon as expected");
 assert.eq(checkExpectedHorizon(horizonMissingURL, 1, node1horizonMissingHostname),
@@ -185,6 +201,9 @@ assert.adminCommandWorkedAllowingNetworkError(replTest.getPrimary(), {replSetRec
 var horizonDifferentPortURL = `mongodb://${node0horizonHostname}/admin?ssl=true`;
 jsTestLog(`URL with horizon using different port: ${horizonDifferentPortURL}`);
 assert.eq(checkExpectedHorizon(horizonDifferentPortURL, 0, node0horizonHostnameDifferentPort),
+          0,
+          "does not return horizon as expected");
+assert.eq(checkExpectedHorizon(horizonDifferentPortURL, "me", node0horizonHostnameDifferentPort),
           0,
           "does not return horizon as expected");
 assert.eq(checkExpectedHorizon(horizonDifferentPortURL, 1, node1horizonHostnameDifferentPort),
